# recsys-example

./: celerybeat-schedule  m.py  main.ipynb  main.py  main.txt.pub  pyproject.toml  submission.csv
votes/: catboost_preds.csv  lgbm_preds.csv  xgb_preds.csv
