[project]
name = "code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "catboost>=1.2.8",
    "celery>=5.6.2",
    "fastapi>=0.121.2",
    "ipykernel>=7.1.0",
    "psycopg2>=2.9.11",
    "psycopg2-binary>=2.9.11",
    "uvicorn>=0.38.0",
]
